--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
         "vue": "^3.3.4",
         "vue-router": "^4.2.5",
         "vue-toastification": "^2.0.0-rc.5",
+        "vue3-toastify": "^0.2.1",
         "vuetify": "^3.3.21"
     },
     "devDependencies": {
         "@vitejs/plugin-vue": "^4.3.4",
+        "laravel-echo": "^1.15.3",
+        "pusher-js": "^8.4.0-rc2",
         "sass": "^1.69.4",
         "sass-loader": "^13.3.2",
         "vite": "^4.4.9"
